--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-body-images": "^1.0.1",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^3.1.3",
+    "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
     "styled-jsx": "^2.2.4",
     "webfontloader": "^1.6.28",
